[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/images/background_placeholder.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/SlotRace/Gameplay.gd" type="Script" id=2]
[ext_resource path="res://sprites/blue_car.png" type="Texture" id=3]
[ext_resource path="res://sprites/circuit.png" type="Texture" id=4]
[ext_resource path="res://sprites/green_car.png" type="Texture" id=5]

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 87, 636, 0, 0, 0, 0, 87, 78, 0, 0, 0, 0, 100, 68, 0, 0, 0, 0, 604, 69, 0, 0, 0, 0, 617, 79, 0, 0, 0, 0, 616, 252, 0, 0, 0, 0, 603, 261, 0, 0, 0, 0, 237, 261, 0, 0, 0, 0, 227, 271, 0, 0, 0, 0, 227, 392, 0, 0, 0, 0, 238, 399, 0, 0, 0, 0, 601, 400, 0, 0, 0, 0, 613, 410, 0, 0, 0, 0, 612, 878, 0, 0, 0, 0, 599, 887, 0, 0, 0, 0, 100, 886, 0, 0, 0, 0, 87, 877, 0, 0, 0, 0, 87, 636 )
}

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 121, 636, 0, 0, 0, 0, 121, 104, 0, 0, 0, 0, 132, 95, 0, 0, 0, 0, 573, 96, 0, 0, 0, 0, 583, 105, 0, 0, 0, 0, 583, 226, 0, 0, 0, 0, 572, 234, 0, 0, 0, 0, 205, 235, 0, 0, 0, 0, 193, 245, 0, 0, 0, 0, 193, 417, 0, 0, 0, 0, 206, 426, 0, 0, 0, 0, 569, 427, 0, 0, 0, 0, 579, 436, 0, 0, 0, 0, 578, 853, 0, 0, 0, 0, 568, 861, 0, 0, 0, 0, 131, 861, 0, 0, 0, 0, 121, 853, 0, 0, 0, 0, 121, 636 )
}

[sub_resource type="RectangleShape2D" id=5]

[node name="RaceWorld" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SceneBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Components" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Player1MarginArea" type="MarginContainer" parent="Components"]
margin_right = 700.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 15
custom_constants/margin_left = 30

[node name="Player1ControlPanel" type="HBoxContainer" parent="Components/Player1MarginArea"]
margin_left = 30.0
margin_top = 15.0
margin_right = 700.0
margin_bottom = 119.0
size_flags_vertical = 3
alignment = 1

[node name="Player1Button" type="Button" parent="Components/Player1MarginArea/Player1ControlPanel"]
margin_right = 133.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="Player1Dashboard" type="HBoxContainer" parent="Components/Player1MarginArea/Player1ControlPanel"]
margin_left = 137.0
margin_right = 670.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="GameWorld" type="HBoxContainer" parent="Components"]
margin_top = 123.0
margin_right = 700.0
margin_bottom = 1076.0
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="RaceCircuit" type="TextureRect" parent="Components/GameWorld"]
margin_right = 700.0
margin_bottom = 953.0
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="Player1Path2D" type="Path2D" parent="Components/GameWorld"]
curve = SubResource( 3 )

[node name="Player1PathFollow2D" type="PathFollow2D" parent="Components/GameWorld/Player1Path2D"]
position = Vector2( 87, 636 )
rotation = -1.5708

[node name="Player1Car" type="Area2D" parent="Components/GameWorld/Player1Path2D/Player1PathFollow2D"]
position = Vector2( 1, -1.00001 )

[node name="BlueCar" type="Sprite" parent="Components/GameWorld/Player1Path2D/Player1PathFollow2D/Player1Car"]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/GameWorld/Player1Path2D/Player1PathFollow2D/Player1Car"]
shape = SubResource( 2 )

[node name="Player2Path2D" type="Path2D" parent="Components/GameWorld"]
curve = SubResource( 4 )

[node name="Player2PathFollow2D" type="PathFollow2D" parent="Components/GameWorld/Player2Path2D"]
position = Vector2( 121, 636 )
rotation = -1.5708

[node name="Player2Car" type="Area2D" parent="Components/GameWorld/Player2Path2D/Player2PathFollow2D"]

[node name="GreenCar" type="Sprite" parent="Components/GameWorld/Player2Path2D/Player2PathFollow2D/Player2Car"]
rotation = 1.5708
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/GameWorld/Player2Path2D/Player2PathFollow2D/Player2Car"]
shape = SubResource( 5 )

[node name="Player2MarginArea" type="MarginContainer" parent="Components"]
margin_top = 1080.0
margin_right = 700.0
margin_bottom = 1200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_bottom = 15

[node name="Player2ControlPanel" type="HBoxContainer" parent="Components/Player2MarginArea"]
margin_right = 670.0
margin_bottom = 105.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Components/Player2MarginArea/Player2ControlPanel"]
margin_right = 532.0
margin_bottom = 105.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Player2Button" type="Button" parent="Components/Player2MarginArea/Player2ControlPanel"]
margin_left = 536.0
margin_right = 670.0
margin_bottom = 105.0
size_flags_horizontal = 3
